--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <input type="submit">
         </form>
 
-        <ul id="todo-list">
+        <ol id="todo-list">
             <li>Do dishes <button>Remove</button></li>
             <li>Do laundry <button>Remove</button></li>
             <li>Walk dog <button>Remove</button></li>
-        </ul>
+        </ol>
 
         <script src="app.js"></script>
     </body>
