--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>ToDo List</h1>
+        <h1>To<span id="red">Do</span> List.</h1>
         <form id="todo">
             <label for="new-todo">New todo:
                 <input type="text" name="new-todo">
