--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1>To<span id="red">Do</span> List.</h1>
+        <p>A dynamic task tracker</p>
         <form id="todo">
             <label for="new-todo">New todo:
                 <input type="text" name="new-todo">
