--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ToDo App</title>
+        <title>ToDo List</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>To<span id="red">Do</span> List.</h1>
@@ -20,6 +20,9 @@
             <li>Do dishes <button>Remove</button></li>
             <li>Do laundry <button>Remove</button></li>
             <li>Walk dog <button>Remove</button></li>
+            <li>Take out trash <button>Remove</button></li>
+            <li>Order groceries <button>Remove</button></li>
+            
         </ol>
 
         <script src="app.js"></script>
