--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
 
         <ol id="todo-list">
             <li>Do dishes <button>Remove</button></li>
-            <li>Do laundry <button>Remove</button></li>
+            <li>Fold laundry <button>Remove</button></li>
             <li>Walk dog <button>Remove</button></li>
             <li>Take out trash <button>Remove</button></li>
             <li>Order groceries <button>Remove</button></li>
-            
         </ol>
 
+        <audio src="audio/Amazing.m4a"></audio>
+        <audio src="audio/Incredible.m4a"></audio>
+        <audio src="audio/I just don't know....m4a"></audio>
+        <audio src="audio/Th..this...is incredible.m4a"></audio>
         <script src="app.js"></script>
     </body>
 </html>
